--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.21",
     "query-string": "^9.1.1",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "svix": "^1.44.0",
