--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@uploadthing/react": "^7.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
-    "next": "14.2.21",
+    "next": "^14.2.21",
     "query-string": "^9.1.1",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "stripe": "^17.5.0",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
